--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
+	
 	<!-- the entire body must be written by student -->
+<div id="sizeInfo">
+	<h1>width: and height:</h1>
+</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
