--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	
 	<!-- the entire body must be written by student -->
 <div id="sizeInfo">
-	<h1>width: and height:</h1>
+	<h1>width: and Height:</h1>
 </div>
 	
     <script type="text/javascript" src="./script.js">
